@@ -42,6 +42,7 @@ export(position_icscore)
 export(ppm_to_icm)
 export(ppm_to_pcm)
 export(ppm_to_pwm)
+export(prob_match)
 export(pwm_to_ppm)
 export(read_cisbp)
 export(read_homer)
