@@ -191,7 +191,7 @@ For DNA motifs which have an alphabet length of 4, the total IC is 2. To calcula
 The equivalent vectorized `R` code:
 
 ```{r}
-U <- function(C) -sum(PPM(C) * log2(PPM(C)))
+U <- function(C) -sum(PPM(C) * log2(PPM(C)), na.rm = TRUE)
 ```
 
 Where the position uncertainty is the sum of the uncertainty of all alphabet letters (A, C, G, and T). To calculate the final information content (_fIC_):
